Adicionando widgets da direita do site e melhorando o portal

--- a/index.html
+++ b/index.html
@@ -49,33 +49,57 @@
                     <a href=".">Entretenimento</a>
                     <img src="assets/images/arrowdown.jpg" border="0" width="10">
                     <div class="submenu">
-                        <a href="./"><div class="submenuitem">Sub Menu 1</div></a>
-                        <a href="./"><div class="submenuitem">Sub Menu 2</div></a>
-                        <a href="./"><div class="submenuitem">Sub Menu 3</div></a>
-                        <a href="./"><div class="submenuitem">Sub Menu 4</div></a>
-                        <a href="./"><div class="submenuitem">Sub Menu 5</div></a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 1</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 2</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 3</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 4</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 5</div>
+                        </a>
                     </div>
                 </li>
                 <li>
-                        <a href=".">Esportes</a>
-                        <img src="assets/images/arrowdown.jpg" border="0" width="10">
-                        <div class="submenu">
-                                <a href="./"><div class="submenuitem">Sub Menu 1</div></a>
-                                <a href="./"><div class="submenuitem">Sub Menu 2</div></a>
-                                <a href="./"><div class="submenuitem">Sub Menu 3</div></a>
-                        </div>
-                    </li>
+                    <a href=".">Esportes</a>
+                    <img src="assets/images/arrowdown.jpg" border="0" width="10">
+                    <div class="submenu">
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 1</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 2</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 3</div>
+                        </a>
+                    </div>
+                </li>
                 <li><a href=".">Geral</a></li>
                 <li>
-                        <a href=".">Noticias</a>
-                        <img src="assets/images/arrowdown.jpg" border="0" width="10">
-                        <div class="submenu">
-                                <a href="./"><div class="submenuitem">Sub Menu 1</div></a>
-                                <a href="./"><div class="submenuitem">Sub Menu 2</div></a>
-                                <a href="./"><div class="submenuitem">Sub Menu 3</div></a>
-                                <a href="./"><div class="submenuitem">Sub Menu 4</div></a>
-                        </div>
-                    </li>
+                    <a href=".">Noticias</a>
+                    <img src="assets/images/arrowdown.jpg" border="0" width="10">
+                    <div class="submenu">
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 1</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 2</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 3</div>
+                        </a>
+                        <a href="./">
+                            <div class="submenuitem">Sub Menu 4</div>
+                        </a>
+                    </div>
+                </li>
                 <li><a href=".">Polícias</a></li>
                 <li><a href=".">Vídeos</a></li>
             </ul>
@@ -92,7 +116,61 @@
     <div class="container">
         <div class="containerint">
             <div class="leftside"></div>
-            <div class="rightside"></div>
+            <div class="rightside">
+                <div class="widget">
+                    <div class="widget_titulo">SOCIAL</div>
+                    <div class="widget_conteudo">
+                        <a href=""><img src="assets/images/youtube.png" border="0" width="26" height="26"></a>
+                        <a href=""><img src="assets/images/twitter.png" border="0" width="26" height="26"></a>
+                        <a href=""><img src="assets/images/facebook.png" border="0" width="26" height="26"></a>
+                        <a href=""><img src="assets/images/googleplus.png" border="0" width="26" height="26"></a>
+                        <a href=""><img src="assets/images/rss.png" border="0" width="26" height="26"></a>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget_titulo">ÚLTIMAS NOTÍCIAS</div>
+                    <div class="widget_conteudo">
+                        <div class="noticia_item">
+                            <a href="">Titulo da noticia para que fique com pelo menos duas linhas e o exemplo
+                                sirva.</a>
+                        </div>
+                        <div class="noticia_item">
+                            <a href="">Titulo da noticia para que fique com pelo menos duas linhas e o exemplo
+                                sirva.</a>
+                        </div>
+                        <div class="noticia_item">
+                            <a href="">Titulo da noticia para que fique com pelo menos duas linhas e o exemplo
+                                sirva.</a>
+                        </div>
+                        <div class="noticia_item">
+                            <a href="">Titulo da noticia para que fique com pelo menos duas linhas e o exemplo
+                                sirva.</a>
+                        </div>
+                        <div class="noticia_item">
+                            <a href="">Titulo da noticia para que fique com pelo menos duas linhas e o exemplo
+                                sirva.</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget_titulo">PUBLICIDADE</div>
+                    <div class="widget_conteudo">
+                        <img src="assets/images/banner.jpg" border="0" alt="" width="275">
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget_titulo">ENCONTRE-NOS NO FACEBOOK</div>
+                    <div class="widget_conteudo">
+                        <iframe
+                            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fb7web%2F&tabs&width=1000&height=1000&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                            width="275" height="154" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                            allowTransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
