--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script type="text/javascript" src="assets/js/script.js"></script>
     <title>Mega Portal</title>
 </head>
 
@@ -115,7 +116,18 @@
     </div>
     <div class="container">
         <div class="containerint">
-            <div class="leftside"></div>
+            <div class="leftside">
+                <div class="slideshow" id="slideshow">
+                    <div class="slideshowarea">
+                        <div class="slide" style="background-image: url(http://www.google.com.br/google.jpg)">
+                            
+                        </div>
+                        <div class="slide"></div>
+                        <div class="slide"></div>
+                        <div class="slide"></div>
+                    </div>
+                </div>
+            </div>
             <div class="rightside">
                 <div class="widget">
                     <div class="widget_titulo">SOCIAL</div>
