--- a/index.html
+++ b/index.html
@@ -118,9 +118,18 @@
         <div class="containerint">
             <div class="leftside">
                 <div class="slideshow" id="slideshow">
+                    <div class="slidebolinhas">
+                        <div class="bolinha" onclick="mudarSlide(0)"></div>
+                        <div class="bolinha" onclick="mudarSlide(1)"></div>
+                        <div class="bolinha" onclick="mudarSlide(2)"></div>
+                        <div class="bolinha" onclick="mudarSlide(3)"></div>
+                    </div>
                     <div class="slideshowarea">
                         <div class="slide" style="background-image: url(http://www.google.com.br/google.jpg)">
-                            
+                            <div class="slideinfo">
+                                <div class="slideinfo_titulo">Título de teste</div>
+                                <div class="slideinfo_subtitulo">Subtitulo de teste</div>
+                            </div>
                         </div>
                         <div class="slide"></div>
                         <div class="slide"></div>
@@ -176,10 +185,8 @@
                 <div class="widget">
                     <div class="widget_titulo">ENCONTRE-NOS NO FACEBOOK</div>
                     <div class="widget_conteudo">
-                        <iframe
-                            src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fb7web%2F&tabs&width=1000&height=1000&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                            width="275" height="154" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                            allowTransparency="true" allow="encrypted-media"></iframe>
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fb7web%2F&tabs&width=1000&height=1000&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="275" height="154" style="border:none;overflow:hidden"
+                            scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
             </div>
