--- a/index.html
+++ b/index.html
@@ -125,17 +125,175 @@
                         <div class="bolinha" onclick="mudarSlide(3)"></div>
                     </div>
                     <div class="slideshowarea">
+                        <a href="http://www.google.com.br">
+                            <div class="slide" style="background-image: url(http://www.google.com.br/google.jpg)">
+                                <div class="slideinfo">
+                                    <div class="slideinfo_titulo">Título de teste</div>
+                                    <div class="slideinfo_subtitulo">Subtitulo de teste</div>
+                                </div>
+                            </div>
+                        </a>
                         <div class="slide" style="background-image: url(http://www.google.com.br/google.jpg)">
                             <div class="slideinfo">
                                 <div class="slideinfo_titulo">Título de teste</div>
                                 <div class="slideinfo_subtitulo">Subtitulo de teste</div>
                             </div>
                         </div>
-                        <div class="slide"></div>
-                        <div class="slide"></div>
-                        <div class="slide"></div>
+                        <div class="slide" style="background-image: url(http://www.google.com.br/google.jpg)">
+                            <div class="slideinfo">
+                                <div class="slideinfo_titulo">Título de teste</div>
+                                <div class="slideinfo_subtitulo">Subtitulo de teste</div>
+                            </div>
+                        </div>
+                        <div class="slide" style="background-image: url(http://www.google.com.br/google.jpg)">
+                            <div class="slideinfo">
+                                <div class="slideinfo_titulo">Título de teste</div>
+                                <div class="slideinfo_subtitulo">Subtitulo de teste</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="widget">
+                    <div class="widget_titulo">NOTÍCIAS</div>
+                    <div class="widget_conteudo">
+                        <div class="noticiaarea1">
+                            <div class="noticiaitem noticiabig">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer Algum titulo qualquer Algum titulo qualquer
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+                        </div>
+                        <div class="noticiaarea2">
+                            <a href="http://www.google.com.br">
+                                <div class="noticiaitem">
+                                    <div class="noticiaimg">
+                                        <img src="" border="0" width="80" height="80">
+                                    </div>
+                                    <div class="noticiatitulo">
+                                        Algum titulo qualquer.
+                                    </div>
+                                    <div class="noticiainfo">
+                                        500 comentários
+                                    </div>
+                                </div>
+                            </a>
+
+                            <div class="noticiaitem">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer.
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+
+                            <div class="noticiaitem">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer.
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+
+                            <div class="noticiaitem">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer.
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+                        </div>
+                        <div style="clear: both"></div>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget_titulo">ESPORTES</div>
+                    <div class="widget_conteudo">
+                        <div class="noticiaarea1">
+                            <div class="noticiaitem noticiabig">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer Algum titulo qualquer Algum titulo qualquer
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+                        </div>
+                        <div class="noticiaarea2">
+
+                            <div class="noticiaitem">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer.
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+
+                            <div class="noticiaitem">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer.
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+
+                            <div class="noticiaitem">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer.
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+
+                            <div class="noticiaitem">
+                                <div class="noticiaimg">
+                                    <img src="" border="0" width="80" height="80">
+                                </div>
+                                <div class="noticiatitulo">
+                                    Algum titulo qualquer.
+                                </div>
+                                <div class="noticiainfo">
+                                    500 comentários
+                                </div>
+                            </div>
+                        </div>
+                        <div style="clear: both"></div>
+                    </div>
+                </div>
+
             </div>
             <div class="rightside">
                 <div class="widget">
@@ -174,6 +332,7 @@
                         </div>
                     </div>
                 </div>
+
 
                 <div class="widget">
                     <div class="widget_titulo">PUBLICIDADE</div>
