--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
     <div class="menu">
         <div class="menuint">
-            <ul>
+            <img src="assets/images/menu.png" border="0" width="40" height="" class="menumobile" onclick="toggleMenu()">
+            <ul id="menu">
                 <li><a href="." class="ativo">Home</a></li>
                 <li><a href=".">Economia</a></li>
                 <li>
